1998-06-12  Laurent Pautet <pautet@dorine.enst.fr>

	* xe_stubs.ads, xe_stubs.adb: Spec *and* body of a RCI are now
	marked as RCI in an ali file. This new behaviour arose a
	bug in the version check code.

	* xe_check.adb: We reload ali files after a first step of
	compilation. Unfortunatly, this reload was also done on Ada lib.

1998-05-12  Samuel Tardieu  <sam@inf.enst.fr>

	* make-ada-dir: Updated.

	* xe.adb: Remove unused with of ALI.

	* xe_lead.adb: Remove unused with of Namet and Osint.

	* xe_parse.adb: Remove unused with of GNAT.OS_Lib, Osint and Table.

	* xe_scan.adb: Remove unused with of Csets.

	* xe_stubs.adb: Remove unused with of Unchecked_Deallocation.

1998-05-11  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Change Partition_Interface.Startup into
 	Partition_Interface. To get a fake PCS in GNAT.

1998-04-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* config.sdefault: Fix some problems with NT (????)

1998-04-17  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Compute partition checksum. Move code to compute
	most recent stamp from xe_check.adb to xe_stubs.adb.

	* xe_check.adb: Remove code to compute most recent stamp.

	* xe_back.ads, xe_back.adb: Add checksum component to a partition
 	record.

1998-04-05  Laurent Pautet  <pautet@dorine.enst.fr>

	* xe_stubs.adb: Skip Ascii.CR to please DOS/Windows.

	* xe_utils.adb: (Locate) When locating executable, add executable
 	suffix. (Initialize) Add include GARLIC flag before -largs, -cargs 
	and -bargs but after other flags.

1998-03-31  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_utils.ads: Remove useless with of ALI.

1998-03-30  Laurent Pautet  <pautet@dorine.enst.fr>

	* xe_check.adb: Two major problems have been detected. First,
 	gnatmake has two problems. First, it doesn't detect when an ali
 	has already been loaded. Second, when an obsolete ali is loaded,
 	it is not replaced by the good one that has just been